Added blog area

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,9 @@
     font-family: "Poppins", sans-serif;
 
 }
+body {
+    background-color: #fafafa;
+}
 .fontPara {
     text-decoration: underline;
     color: black;
